# tetrads

./: tetrads.cabal
src/: Main.hs  TetradsModel.hs
src/TetradsView/: ANSI.hs
