name: tetrads
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: A console-based tetris clone in Haskell
description:  
data-dir: ""
 
executable tetrads
    build-depends: QuickCheck -any, ansi-terminal -any, base -any,
                   random -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: TetradsModel TetradsView.ANSI
 
test-suite test-tetrads
    build-depends: QuickCheck -any, ansi-terminal -any, base -any,
                   random -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src